# programming-playground

./: .gitignore  .gitmodules  Jenkinsfile  README.md  Vagrantfile  cheatsheet.md
algorithm_data_structure/leetcode/: 1.two-sum.cpp  1.two-sum.py  100.same-tree.py  101.symmetric-tree.cpp  101.symmetric-tree.py  1017.convert-to-base-2.py  103.binary-tree-zigzag-level-order-traversal.py  104.maximum-depth-of-binary-tree.cpp  104.maximum-depth-of-binary-tree.py  105.construct-binary-tree-from-preorder-and-inorder-traversal.cpp  110.balanced-binary-tree.cpp  110.balanced-binary-tree.py  111.minimum-depth-of-binary-tree.py  120.triangle.py  129.sum-root-to-leaf-numbers.py  133.clone-graph.py  135.candy.cpp  141.linked-list-cycle.py  142.linked-list-cycle-ii.cpp  144.binary-tree-preorder-traversal.cpp  144.binary-tree-preorder-traversal.py  145.binary-tree-postorder-traversal.py  148.sort-list.py  15.3-sum.py  152.maximum-product-subarray.py  167.two-sum-ii-input-array-is-sorted.cpp  167.two-sum-ii-input-array-is-sorted.py  179.largest-number.py  19.remove-nth-node-from-end-of-list.py  198.house-robber.cpp  198.house-robber.py  2.add-two-numbers.py  20.valid-parentheses.py  200.number-of-islands.py  204.count-primes.py  206.reverse-linked-list.cpp  209.minimum-size-subarray-sum.py  21.merge-two-sorted-lists.py  210.course-schedule-ii.cpp  215.kth-largest-element-in-an-array.cpp  (+62 more)
algorithm_data_structure/mastering_algorithms_with_c/: CMakeLists.txt  dummy_test.c
algorithm_data_structure/trie/: README.md  trie.c  trie.go
algorithm_datastructure/collection/: queue.c
algorithm_datastructure/leetcode/: 104.maximum-depth-of-binary-tree.py  121.best-time-to-buy-and-sell-stock.py  122.best-time-to-buy-and-sell-stock-ii.py  123.best-time-to-buy-and-sell-stock-iii.py  135.candy.py  142.linked-list-cycle-ii.py  149.max-points-on-a-line.py  206.reverse-linked-list.py  225.implement-stack-using-queues.py  242.valid-anagram.py  28.implement-str-str.py  3.longest-substring-without-repeating-characters.py  347.top-k-frequent-elements.py  394.decode-string.py  435.non-overlapping-intervals.py  5.longest-palindromic-substring.py  543.diameter-of-binary-tree.py  6.zig-zag-conversion.py  695.max-area-of-island.py  70.climbing-stairs.py  71.simplify-path.py  74.search-a-2-d-matrix.py  94.binary-tree-inorder-traversal.py  946.validate-stack-sequences.py
algorithm_datastructure/the_practice_of_programming/: search.c
ansible/: README.md  bochs.yml  bootstrap.yml  docker.yml  linux_kernel_dev.yml  lxc.yml  podman.yml  postgresql.yml  qemu.yml  redis.yml
ci_cd/jenkins/: Dockerfile  Jenkinsfile_0  Jenkinsfile_1  run_jenkins_container.sh  run_jenkins_local.sh
data_processing/python_for_data_analysis/: chapter_1.py
database/graph_database/: requirements.txt
database/mariadb/: package-lock.json
language/ada/: hello.adb
language/awk/: 1.awk  2.awk  array.awk  learn_awk.sh
language/c/21st_century_c/: .clang-format  CMakeLists.txt  TestCppConfig.cmake  \  asprintf.c  c_factors.c  cetology.c  config.h.in  constchange.c  conststruct.c  curly.c  dict.c  dict.h  dict_test.c  dict_use.c  dynamic.c  erf.c  fibo.c  fstr.c  fstr.h  getenv.c  getstrings.c  gsl_erf.c  keyval.c  keyval.h  mapreduce_wc.c  mmap.c  noreturn.c  nyt_feed.c  openmp_atoms.c  openmp_getmax.c  openmp_getmax_use.c  openmp_wc.c  papersize.c  preprocess.c  print_dispatch.c  print_methods.c  print_typedef.h  print_vtable.c  print_vtable.h  (+27 more)
language/c/21st_century_c/chap_10/: compund_literal.c  var_arg.c  vec_func.c
language/c/21st_century_c/chap_11/: seamlessone.c
language/c/21st_century_c/cmake/module/: FindPQXX.cmake
language/erlang/: fifo.erl  functions.erl  guards.erl  kitty_gen_server.erl  kitty_server.erl  linkmon.erl  multiproc.erl  (+2 more)
linux/the_linux_programming_interface/: CMakeLists.txt  sync_to_linux_vm.sh
linux/the_linux_programming_interface/daemons/: CMakeLists.txt  become_daemon.c  become_daemon.h  test_become_daemon.c
linux/the_linux_programming_interface/dir_links/: CMakeLists.txt  list_files_readdir_r.c
linux/the_linux_programming_interface/filebuff/: CMakeLists.txt  direct_read.c
linux/the_linux_programming_interface/fileio/: CMakeLists.txt  bad_exclusive_open.c  copy.c  seek_io.c  t_readv.c
linux/the_linux_programming_interface/filesys/: CMakeLists.txt  t_statfs.c
linux/the_linux_programming_interface/inotify/: CMakeLists.txt  demo_inotify.c
linux/the_linux_programming_interface/lib/: CMakeLists.txt  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
linux/the_linux_programming_interface/memalloc/: CMakeLists.txt  free_and_sbrk.c
linux/the_linux_programming_interface/mmap/: CMakeLists.txt  anon_mmap.c  mmcat.c  t_mmap.c
linux/the_linux_programming_interface/proc/: CMakeLists.txt  display_env.c  modify_env.c
linux/the_linux_programming_interface/proccred/: CMakeLists.txt  idshow.c
linux/the_linux_programming_interface/pty/: CMakeLists.txt  pty_fork.c  pty_fork.h  pty_master_open.c  pty_master_open.h  script.c  tty_functions.h
linux/the_linux_programming_interface/signals/: CMakeLists.txt  intquit.c  ouch.c  sig_sender.c  siginterrupt.c  t_kill.c
linux/the_linux_programming_interface/sysinfo/: CMakeLists.txt  procfs_pidmax.c  t_uname.c
linux/the_linux_programming_interface/time/: CMakeLists.txt  calendar_time.c  curr_time.c  curr_time.h
linux/the_linux_programming_interface/tty/: CMakeLists.txt  demo_SIGWINCH.c  new_intr.c  no_echo.c  test_tty_functions.c  tty_functions.c
linux/the_linux_programming_interface/users_groups/: CMakeLists.txt  ugid_functions.c  ugid_functions.h
linux_kernel/: Vagrantfile
networking/asio/: coroutines.cpp  meson.build  tcp_server.cpp  timer.cpp  web_get.cpp
os_elephant/: README.md
playbooks/: bootstrap.yml
remote_access/: test_cisco_ios_cli_telnet.py
tools/build_systems/cmake/: CMakeLists.txt  setup.sh
tools/build_systems/cmake/apps/: CMakeLists.txt  app.cpp
tools/build_systems/cmake/include/modern/: lib.hpp
tools/build_systems/cmake/src/: CMakeLists.txt  lib.cpp
tools/build_systems/cmake/tests/: CMakeLists.txt
(+738 files in other folders)
