include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
	testlib
	testlib.cpp
)

target_link_libraries(
	testlib
	GTest::gtest_main
	modern_library
)

include(GoogleTest)
gtest_discover_tests(testlib)
